--- a/CPP_Module_03/ex02/Makefile
+++ b/CPP_Module_03/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: ookamonu <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/11 05:34:26 by ookamonu          #+#    #+#              #
-#    Updated: 2024/03/19 09:03:12 by ookamonu         ###   ########.fr        #
+#    Updated: 2024/03/19 23:37:43 by ookamonu         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,9 +16,9 @@ CC		= c++
 
 CFLAGS	= -g3 -std=c++98 -Wextra -Werror -Wall
 
-HEADER	= ClapTrap.hpp
+HEADER	= ClapTrap.hpp ScavTrap.hpp FlagTrap.hpp
 
-SRCS	= ClapTrap.cpp main.cpp
+SRCS	= ClapTrap.cpp ScavTrap.cpp FlagTrap.cpp main.cpp
 
 OBJS	= $(SRCS:.cpp=.o)
 
