--- a/CPP_Module_03/ex01/Makefile
+++ b/CPP_Module_03/ex01/Makefile
@@ -6,11 +6,11 @@
 #    By: ookamonu <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/11 05:34:26 by ookamonu          #+#    #+#              #
-#    Updated: 2024/03/19 23:36:35 by ookamonu         ###   ########.fr        #
+#    Updated: 2024/03/20 05:20:22 by ookamonu         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	= Clap
+NAME	= Scav
 
 CC		= c++
 
