--- a/CPP_Module_03/ex00/Makefile
+++ b/CPP_Module_03/ex00/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME	= Clap
+NAME	= ClapT
 
 CC		= c++
 
