--- a/CPP_Module_03/ex02/Makefile
+++ b/CPP_Module_03/ex02/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME	= Flag
+NAME	= FlagT
 
 CC		= c++
 
