--- a/CPP_Module_03/ex01/Makefile
+++ b/CPP_Module_03/ex01/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME	= Scav
+NAME	= ScavT
 
 CC		= c++
 
