--- a/CPP_Module_04/ex02/Makefile
+++ b/CPP_Module_04/ex02/Makefile
@@ -6,19 +6,19 @@
 #    By: ookamonu <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/11 05:34:26 by ookamonu          #+#    #+#              #
-#    Updated: 2024/03/23 20:32:37 by ookamonu         ###   ########.fr        #
+#    Updated: 2024/03/24 23:40:50 by ookamonu         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	= Abt_AnimalBrain
+NAME	= A_Animal
 
 CC		= c++
 
 CFLAGS	= -g3 -std=c++98 -Wextra -Werror -Wall
 
-HEADER	= Abt_Animal.hpp Dog.hpp Cat.hpp WrongCat.hpp WrongAnimal.hpp Brain.hpp
+HEADER	= A_Animal.hpp Dog.hpp Cat.hpp WrongCat.hpp WrongAnimal.hpp Brain.hpp
 
-SRCS	= Abt_Animal.cpp Dog.cpp Cat.cpp WrongCat.cpp WrongAnimal.cpp Brain.cpp main.cpp
+SRCS	= A_Animal.cpp Dog.cpp Cat.cpp WrongCat.cpp WrongAnimal.cpp Brain.cpp main.cpp
 
 OBJS	= $(SRCS:.cpp=.o)
 
